# ros1-release

./: Dockerfile.base  README.md  generate.sh
.github/: bootstrap_packages.txt
.github/scripts/: build_debs.sh  setup_base_deps.sh
.github/workflows/: build_deb.yml  upload_ppa.yml
.history/: Dockerfile_20260210094456.base
PlotJuggler/: CHANGELOG.rst  CMakeLists.txt  CMakeUserPresets.json  COMPILE.md  Dockerfile-humble-appimage  README.md  code_of_conduct.md  conan_build.sh  conanfile.txt  flake.nix  package.xml  vcpkg.json
PlotJuggler/DEBIAN/: postrm
PlotJuggler/appimage/: AppImage.sh
PlotJuggler/cmake/: FindLZ4.cmake  FindZSTD.cmake  download_wasmtime.cmake  find_or_download_fmt.cmake  find_or_download_lua.cmake  find_or_download_lz4.cmake  find_or_download_zstd.cmake
PlotJuggler/docs/: wasm_plugins.md
PlotJuggler/installer/: config.xml  windeploy_pj.bat
PlotJuggler/nix/: arrow.patch
PlotJuggler/plotjuggler_app/: CMakeLists.txt  colormap_selector.ui  curve_tracker.cpp  curve_tracker.h  curvelist_panel.cpp  curvelist_panel.h  curvelist_panel.ui  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  nlohmann_parsers.h  plotjuggler.rc  plotwidget.cpp  plotwidget.h  utils.h  (+21 more)
PlotJuggler/plotjuggler_plugins/DataLoadCSV/: CMakeLists.txt  dataload_csv.cpp  dataload_csv.ui  timestamp_parsing.cpp  timestamp_parsing.h
regulated_pure_pursuit_controller/: CMakeLists.txt
ros_map_edit/: CMakeLists.txt  PROJECT_SUMMARY.md  README.md  RVIZ_UI_USAGE.md  USAGE.md  package.xml  plugin_description.xml
teb_local_planner/: CMakeLists.txt
usb_cam/: CMakeLists.txt
(+123 files in other folders)
